iceberg/iceberg-handler/src/test/queries/negative/timetravel_from_to_version_non_iceberg.q
create table tbl_orc (a int, b string);
select * from tbl_orc FOR SYSTEM_VERSION FROM 11223 TO 11239;